--- a/kubernetes/infrastructure/cilium/helm-release.yaml
+++ b/kubernetes/infrastructure/cilium/helm-release.yaml
@@ -51,6 +51,10 @@ data:
     # Enable kube-proxy replacement
     kubeProxyReplacement: true
 
+    # Gateway API support
+    gatewayAPI:
+      enabled: true
+
     # WireGuard encryption
     encryption:
       enabled: true
@@ -62,6 +66,11 @@ data:
 
     loadBalancer:
       acceleration: disabled
+
+    # Bypass socket-level LB for pod traffic
+    # Required for Cilium Gateway API services which have no traditional backends
+    socketLB:
+      hostNamespaceOnly: true
 
     bpf:
       enableTCX: false
@@ -95,6 +104,36 @@ data:
     # Identity allocation mode for enhanced security
     identityAllocationMode: crd
 
+    # Prometheus metrics for Cilium Agent
+    prometheus:
+      enabled: true
+      port: 9962
+      serviceMonitor:
+        enabled: true
+        labels:
+          release: kube-prometheus-stack
+
+    # Hubble observability
+    hubble:
+      enabled: true
+      relay:
+        enabled: true
+      ui:
+        enabled: false
+      metrics:
+        enabled:
+          - dns
+          - drop
+          - tcp
+          - flow
+          - icmp
+          - http
+          - port-distribution
+        serviceMonitor:
+          enabled: true
+          labels:
+            release: kube-prometheus-stack
+
     # Resource limits for production readiness
     resources:
       limits:
@@ -115,6 +154,10 @@ data:
       prometheus:
         enabled: true
         port: 9963
+        serviceMonitor:
+          enabled: true
+          labels:
+            release: kube-prometheus-stack
 
     l2podAnnouncements:
       enabled: true
@@ -123,10 +166,6 @@ data:
     bandwidthManager:
       enabled: true
       bbr: true
-
-    # Enable PMTU discovery for mixed MTU environments (1500/9000)
-    pmtuDiscovery:
-      enabled: true
 
     # Tolerations for control plane nodes and agent-not-ready deadlock prevention
     tolerations:
@@ -138,4 +177,8 @@ data:
       effect: NoSchedule
     - key: node.kubernetes.io/not-ready
       operator: Exists
+      effect: NoSchedule
+    - key: workload-type
+      operator: Equal
+      value: heavy
       effect: NoSchedule
