--- a/kubernetes/infrastructure/storage/nfs-client/kustomization.yaml
+++ b/kubernetes/infrastructure/storage/nfs-client/kustomization.yaml
@@ -1,8 +1,5 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - sources
-  - cilium
-  - cert-manager
-  - gateway
-  - storage
+  - helm-release.yaml
