feat: add k8s-gateway for Tailscale DNS

--- a/kubernetes/infrastructure/sources/helm-repositories.yaml
+++ b/kubernetes/infrastructure/sources/helm-repositories.yaml
@@ -34,3 +34,12 @@ metadata:
 spec:
   interval: 1h
   url: https://pkgs.tailscale.com/helmcharts
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: k8s-gateway
+  namespace: flux-system
+spec:
+  interval: 1h
+  url: https://k8s-gateway.github.io/k8s_gateway/
