--- a/kubernetes/infrastructure/cilium/network-policy.yaml
+++ b/kubernetes/infrastructure/cilium/network-policy.yaml
@@ -14,6 +14,30 @@ spec:
   - Egress
 
 ---
+# Allow Cloudflare Tunnel to reach Gateway API (HTTP/HTTPS)
+# Cilium Gateway handles traffic via eBPF, but we need to allow the
+# initial connection to the gateway service
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-cloudflare-to-gateway
+  namespace: kube-system
+spec:
+  podSelector: {}
+  policyTypes:
+  - Ingress
+  ingress:
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: cloudflare-operator-system
+    ports:
+    - protocol: TCP
+      port: 80
+    - protocol: TCP
+      port: 443
+
+---
 # Allow Cilium Agent communication
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
@@ -28,6 +52,16 @@ spec:
   - Ingress
   - Egress
   ingress:
+  # Allow Gateway API traffic from Cloudflare Tunnel
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: cloudflare-operator-system
+    ports:
+    - protocol: TCP
+      port: 80
+    - protocol: TCP
+      port: 443
   # Allow health checks
   - from:
     - podSelector:
@@ -206,11 +240,19 @@ spec:
     - protocol: TCP
       port: 4245
   egress:
-  # Allow communication with Cilium agents
+  # Allow DNS resolution
   - to:
     - podSelector:
         matchLabels:
-          k8s-app: cilium
+          k8s-app: kube-dns
     ports:
+    - protocol: UDP
+      port: 53
+    - protocol: TCP
+      port: 53
+  # Allow communication with hubble-peer service (Cilium agents on host network)
+  - ports:
+    - protocol: TCP
+      port: 443
     - protocol: TCP
       port: 4244
