--- a/kubernetes/infrastructure/sources/helm-repositories.yaml
+++ b/kubernetes/infrastructure/sources/helm-repositories.yaml
@@ -43,3 +43,12 @@ metadata:
 spec:
   interval: 1h
   url: https://k8s-gateway.github.io/k8s_gateway/
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: prometheus-community
+  namespace: flux-system
+spec:
+  interval: 1h
+  url: https://prometheus-community.github.io/helm-charts
