feat: add metrics-server for resource metrics API

--- a/kubernetes/infrastructure/sources/helm-repositories.yaml
+++ b/kubernetes/infrastructure/sources/helm-repositories.yaml
@@ -61,3 +61,12 @@ metadata:
 spec:
   interval: 1h
   url: https://grafana.github.io/helm-charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: metrics-server
+  namespace: flux-system
+spec:
+  interval: 1h
+  url: https://kubernetes-sigs.github.io/metrics-server/
