feat: add llama-cpp LLM inference and metrics dashboard

--- a/kubernetes/infrastructure/kyverno/policies/avoid-gpu-nodes.yaml
+++ b/kubernetes/infrastructure/kyverno/policies/avoid-gpu-nodes.yaml
@@ -37,6 +37,8 @@ spec:
                 - cert-manager
                 - monitoring
                 - cilium-system
+                - storage
+                - llama-cpp
           # Exclude DaemonSet pods (they need to run everywhere)
           - resources:
               kinds:
