--- a/kubernetes/infrastructure/storage/local-path/kustomization.yaml
+++ b/kubernetes/infrastructure/storage/local-path/kustomization.yaml
@@ -47,6 +47,10 @@ patches:
               - key: node.kubernetes.io/disk-pressure
                 operator: Exists
                 effect: NoSchedule
+              - key: workload-type
+                operator: Equal
+                value: heavy
+                effect: NoSchedule
             affinity:
               nodeAffinity:
                 requiredDuringSchedulingIgnoredDuringExecution:
@@ -59,7 +63,7 @@ patches:
                 image: busybox:stable
                 imagePullPolicy: IfNotPresent
 
-  # Make local-path the default StorageClass
+  # Make local-path the default StorageClass and enable expansion
   - target:
       kind: StorageClass
       name: local-path
@@ -70,6 +74,7 @@ patches:
         name: local-path
         annotations:
           storageclass.kubernetes.io/is-default-class: "true"
+      allowVolumeExpansion: true
 
   # Update Deployment environment variable for Talos path
   - target:
